update: initial setup for media page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <h1>AltSchool School of Engineering Assignment Two</h1>
     <ul>
+        <li><h3><a href="/media.html">Media Page</a></h3></li>
         <li><h3><a href="/table.html">Table Page</a></h3></li>
     </ul>
   </body>
