update: added semantics

--- a/index.html
+++ b/index.html
@@ -4,13 +4,25 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Abdulbaki Suraj - AltSchool SOE Assignment Two</title>
-    <meta name="description" content="AltSchool School of Engineering Assignment Two for Abdulbaki Suraj"/>
+    <meta
+      name="description"
+      content="AltSchool School of Engineering Assignment Two for Abdulbaki Suraj"
+    />
   </head>
   <body>
-    <h1>AltSchool School of Engineering Assignment Two</h1>
-    <ul>
-        <li><h3><a href="./media.html">Media Page</a></h3></li>
-        <li><h3><a href="./table.html">Table Page</a></h3></li>
-    </ul>
+    <header>
+      <h1>AltSchool School of Engineering Assignment Two</h1>
+    </header>
+
+    <section>
+      <ul>
+        <li>
+          <h3><a href="./media.html">Media Page</a></h3>
+        </li>
+        <li>
+          <h3><a href="./table.html">Table Page</a></h3>
+        </li>
+      </ul>
+    </section>
   </body>
 </html>
