--- a/media.html
+++ b/media.html
@@ -10,6 +10,8 @@
     />
   </head>
   <body>
-    <h1>Media Page - AltSchool School of Engineering Assignment Two</h1>
+    <header>
+      <h1>Media Page - AltSchool School of Engineering Assignment Two</h1>
+    </header>
   </body>
 </html>
