--- a/table.html
+++ b/table.html
@@ -10,52 +10,57 @@
     />
   </head>
   <body>
-    <h1>Table Page - AltSchool School of Engineering Assignment Two</h1>
-    <h2>Schools and Courses</h2>
-    <table border="1">
-      <thead>
-        <tr>
-          <th>School</th>
-          <th>Abbreviation</th>
-          <th>Courses</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>School of Data</td>
-          <td>SOD</td>
-          <td>
-            <ul>
-              <li>Data Analysis</li>
-              <li>Data Engineering</li>
-              <li>Data Science</li>
-            </ul>
-          </td>
-        </tr>
-        <tr>
-          <td>School of Engineering</td>
-          <td>SOE</td>
-          <td>
-            <ul>
-              <li>Backend Engineering</li>
-              <li>Cloud Engineering</li>
-              <li>Cyber Security</li>
-              <li>Frontend Engineering</li>
-            </ul>
-          </td>
-        </tr>
-        <tr>
-          <td>School of Product</td>
-          <td>SOP</td>
-          <td>
-            <ul>
-              <li>Product Design</li>
-              <li>Product Management</li>
-              <li>Product Marketing</li>
-            </ul>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+    <header>
+      <h1>Table Page - AltSchool School of Engineering Assignment Two</h1>
+    </header>
+
+    <section>
+      <h2>Schools and Courses</h2>
+      <table border="1">
+        <thead>
+          <tr>
+            <th>School</th>
+            <th>Abbreviation</th>
+            <th>Courses</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>School of Data</td>
+            <td>SOD</td>
+            <td>
+              <ul>
+                <li>Data Analysis</li>
+                <li>Data Engineering</li>
+                <li>Data Science</li>
+              </ul>
+            </td>
+          </tr>
+          <tr>
+            <td>School of Engineering</td>
+            <td>SOE</td>
+            <td>
+              <ul>
+                <li>Backend Engineering</li>
+                <li>Cloud Engineering</li>
+                <li>Cyber Security</li>
+                <li>Frontend Engineering</li>
+              </ul>
+            </td>
+          </tr>
+          <tr>
+            <td>School of Product</td>
+            <td>SOP</td>
+            <td>
+              <ul>
+                <li>Product Design</li>
+                <li>Product Management</li>
+                <li>Product Marketing</li>
+              </ul>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
   </body>
 </html>
