update: added audio element

--- a/media.html
+++ b/media.html
@@ -13,5 +13,24 @@
     <header>
       <h1>Media Page - AltSchool School of Engineering Assignment Two</h1>
     </header>
+
+    <section>
+      <h2>Audio Element</h2>
+      <p>I have come to find out that having quite a unique set of names comes with its burden for others - its pronounciation.<br>So below are audio notes of how to pronouce mine :)</p>
+      <ul>
+        <li>
+          <p>Abdulbaki</p>
+          <audio src="./assets/audio/abdulbaki.mp4" type="audio/mp4" controls></audio>
+        </li>
+        <li>
+          <p>Adabara</p>
+          <audio src="./assets/audio/adabara.mp4" type="audio/mp4" controls></audio>
+        </li>
+        <li>
+          <p>Suraj</p>
+          <audio src="./assets/audio/suraj.mp4" type="audio/mp4" controls></audio>
+        </li>
+      </ul>
+    </section>
   </body>
 </html>
