--- a/media.html
+++ b/media.html
@@ -15,7 +15,7 @@
     </header>
 
     <section>
-      <h2>Audio Element</h2>
+      <h2>Suffering from uniqueness</h2>
       <p>I have come to find out that having quite a unique set of names comes with its burden for others - its pronounciation.<br>So below are audio notes of how to pronouce mine :)</p>
       <ul>
         <li>
@@ -31,6 +31,21 @@
           <audio src="./assets/audio/suraj.mp4" type="audio/mp4" controls></audio>
         </li>
       </ul>
+    </section>
+
+    <section>
+      <h2>Surpassing my limit</h2>
+      <p>Applying to AltSchool to pick up a new skill seems pretty ballsy if you ask me.<br>I mean, as a Backend Developer you'd expect I'd want to improve on that or pick up Frontend.<br>But no, here I am diving head first into Cloud Engineering. Let's just say I'm following my intuition.<br>For a while now, I've found myself having to log into servers to perform routine google search powered tasks :)<br>So I guess deciding to formally learn this doesn't seem counter-intuitive at all.<br>Learning something new can be frustrating at first. No one ever said growth was simple.<br>So each time I'm feeling frustrating, I remember my favorite character from the anime, Hajime No Ippo, saying, <em>"I'm prepared to go past my limit!"</em></p>
+      <picture>
+        <source media="(min-width: 1024px)" srcset="./assets/image/past-my-limit.png"
+        <source media="(min-width: 641px)" srcset="./assets/image/past-my-limit-640.png" />
+        <source media="(max-width: 640px)" srcset="./assets/image/past-my-limit-320.png" />
+        <img src="./assets/image/past-my-limit-640.png" alt="cartoon depiction of a character saying he's ready to go past his limit"/>
+      </picture>
+    </section>
+
+    <section>
+      
     </section>
   </body>
 </html>
