update: added main

--- a/index.html
+++ b/index.html
@@ -14,15 +14,17 @@
       <h1>AltSchool School of Engineering Assignment Two</h1>
     </header>
 
-    <section>
-      <ul>
-        <li>
-          <h3><a href="./media.html">Media Page</a></h3>
-        </li>
-        <li>
-          <h3><a href="./table.html">Table Page</a></h3>
-        </li>
-      </ul>
-    </section>
+    <main>
+      <nav>
+        <ul>
+          <li>
+            <h3><a href="./media.html">Media Page</a></h3>
+          </li>
+          <li>
+            <h3><a href="./table.html">Table Page</a></h3>
+          </li>
+        </ul>
+      </nav>
+    </main>
   </body>
 </html>
