--- a/table.html
+++ b/table.html
@@ -14,7 +14,7 @@
       <h1>Table Page - AltSchool School of Engineering Assignment Two</h1>
     </header>
 
-    <section>
+    <main>
       <h2>Schools and Courses</h2>
       <table border="1">
         <thead>
@@ -61,6 +61,6 @@
           </tr>
         </tbody>
       </table>
-    </section>
+    </main>
   </body>
 </html>
